manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipe-jet7960-apivvv-service
spec:
  type: NodePort
  selector:
    app: pipe-jet7960-apivvv
  ports:
    - protocol: TCP
      port: 8120
      targetPort: 8080
